fix player visibilty on desktop by making it not initally visible

--- a/app/styles/player.less
+++ b/app/styles/player.less
@@ -14,7 +14,7 @@
     // bottom: 0%;
     height: 80px;
     //padding: 20px;
-
+    display: none;
     color: #fff;
 
 
@@ -39,6 +39,7 @@ body.has-fixed-player{
         left: 50%;
         bottom: 0%;
         z-index: 1200;
+        display: block;
     }
     #apm_player_container_spacer{
         content: '';
